extends Control




func _on_Level1_pressed():
	get_tree().change_scene("res://Levels/Level_0.tscn")


func _on_Level2_pressed():
	pass # Replace with function body.


func _on_Level3_pressed():
	pass # Replace with function body.


func _on_Back_pressed():
	get_tree().change_scene("res://Levels/Menu.tscn")
